feat(): Name change KWh for scrap to KWh per ton, Optimus Steel logo to be placed in password recovery and password change in MTD Delays

--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Qmos.UI.ViewModels.UpdateTimeViewModel
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "KWh Per Scrap Ton";
+    ViewData["Title"] = "KWh Per Ton";
     ViewData["Root"] = "Dashboards";
 }
 
