--- a/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
@@ -29,8 +29,30 @@
         </div>
         <div class="ibox-content">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-md-10">
                     <canvas id="chartMTDMissedHeats" width="140" height="50" style="margin: 18px auto 0"></canvas>
+                </div>
+                <div class="col-md-2" style="margin-top:80px">                    
+                    <div >
+                        <ul class="list-group" >
+                            <li class="list-group-item" style="border:hidden;padding:0px;margin-bottom:0px">
+                                <label style="font-size:18px">Crew</label>
+                            </li>
+                            <li class="list-group-item" style="border:hidden; padding:0px;margin-bottom:0px">
+                                <i class="fa fa-circle" style="color:#138cfc;"></i> <span style="font-size:16px">C</span>
+                            </li>
+                            <li class="list-group-item" style="border:hidden; padding:0px;margin-bottom:0px">
+                                <i class="fa fa-circle" style="color:#2c54a9; "></i> <span style="font-size:16px">D</span>
+                            </li>
+                            <li class="list-group-item" style="border:hidden;padding:0px;margin-bottom:0px">
+                                <i class="fa fa-circle" style="color:#e36b33;"></i> <span style="font-size:16px">A</span>
+                            </li>
+                            <li class="list-group-item" style="border:hidden;padding:0px;margin-bottom:0px">
+                                <i class="fa fa-circle" style="color:#7c1c84;"></i> <span style="font-size:16px">B</span>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
 
@@ -42,7 +64,8 @@
     <script src="~/js/plugins/toastr/toastr.min.js"></script>
     <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
     <script src="~/js/plugins/chartjs/Chart.min.js"></script>
-    <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+   @* <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>*@
+    <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
     <script src="~/js/plugins/moment/moment.min.js"></script>
     <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
     <script src="~/js/Qmos/dashboard.js"></script>
