--- a/Qmos.UI/Views/Account/Login.cshtml
+++ b/Qmos.UI/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
             <div class="wrap-login100 p-t-50 p-b-0">
                 <form method="post">
                     @*<div class="text-center" style="padding: 50px;">
-                        <img width="100" src="../images/profile_small.jpg" />
+                        <img width="100"  src="~/images/Optimus_Clear_Background.jpg" />
                     </div>*@
                     <div class="wrap-input100 validate-input m-b-10" data-validate="useremail is required">
                         <input class="input100" type="text" name="useremail" id="useremail" placeholder="Email">
