--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -12,8 +12,8 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-chosen.css" />
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-6">
-        <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
+    <div class="col-sm-12 text-center" style="font-size:40px;color:#000000">
+        @(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")
     </div>
 </div>
 
@@ -41,7 +41,13 @@
                     <canvas id="chartIronYield" height="157" width="600"></canvas>
                 </div>
             </div>
+
         </div>
+    </div>
+    <div class="fa-pull-right ">
+        <span>
+            <img alt="image" height="80" src="~/images/LK_turia_logos55cm_optimus.png">
+        </span>
     </div>
 </div>
 
