--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -13,9 +13,8 @@
 
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-6">
-
-        <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
+    <div class="col-sm-12 text-center" style="font-size:40px;color:#000000">
+        @(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")
     </div>
 </div>
 
@@ -34,7 +33,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins font-bold" style="color:red;"id="Average">0.00</h1>
+                            <h1 class="no-margins font-bold" style="color:red;" id="Average">0.00</h1>
                             <small>Average of KwhTon</small>
                         </div>
                     </div>
@@ -46,6 +45,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="fa-pull-right ">
+        <span>
+            <img alt="image" height="80" src="~/images/LK_turia_logos55cm_optimus.png">
+        </span>
     </div>
 </div>
 
