--- a/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
@@ -21,45 +21,50 @@
 </style>
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-6">
-        <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
+    <div class="col-sm-12 text-center" style="font-size:40px;color:#000000">
+        @(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")
     </div>
 </div>
 
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="ibox">
-                <div class="col-lg-12" data-rolable-url="dash-MTDAverage" data-rolable-name="MTD Average">
-                    <div class="ibox ">
-                        <div class="ibox-title">
-                            <h5 style=" font-size: 150%;">@DateTime.Now.ToString("MM/dd/yyyy HH:mm")</h5>
-                            <div class="ibox-tools">
-                                <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
-                                    <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
-                                </div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="ibox">
+            <div class="col-lg-12" data-rolable-url="dash-MTDAverage" data-rolable-name="MTD Average">
+                <div class="ibox ">
+                    <div class="ibox-title">
+                        <h5 style=" font-size: 150%;">@DateTime.Now.ToString("MM/dd/yyyy HH:mm")</h5>
+                        <div class="ibox-tools">
+                            <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
+                                <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
                             </div>
                         </div>
-                        <div class="ibox-content">
-                            <div class="row">
-                                <div class="text-center col-md-3 "><label>EAF KWht</label><svg id="Chart1" class="Alg DrawChart1"></svg> </div>
-                                <div class="text-center col-md-3"><label>Eaf + LRF KwhT</label><svg id="Chart2" class="Alg DrawChart2"></svg> </div>
-                                <div class="text-center col-md-3"><label>Ton per Hour (POn)</label><svg id="Chart3" class="Alg DrawChart3"></svg> </div>
-                                <div class="text-center col-md-3"><label>Iron Yield</label><svg id="Chart4" class="Alg DrawChart4"></svg> </div>
+                    </div>
+                    <div class="ibox-content">
+                        <div class="row">
+                            <div class="text-center col-md-3 "><label>EAF KWht</label><svg id="Chart1" class="Alg DrawChart1"></svg> </div>
+                            <div class="text-center col-md-3"><label>Eaf + LRF KwhT</label><svg id="Chart2" class="Alg DrawChart2"></svg> </div>
+                            <div class="text-center col-md-3"><label>Ton per Hour (POn)</label><svg id="Chart3" class="Alg DrawChart3"></svg> </div>
+                            <div class="text-center col-md-3"><label>Iron Yield</label><svg id="Chart4" class="Alg DrawChart4"></svg> </div>
 
-                            </div>
-                            <div class="row">
-                                <div class="text-center col-md-3"><label>Foamy Carbon</label><svg id="Chart5" class="Alg DrawChart5"></svg> </div>
-                                <div class="text-center col-md-3"><label>NG</label><svg id="Chart6" class="Alg DrawChart6"></svg> </div>
-                                <div class="text-center col-md-3"><label>Aluminum</label><svg id="Chart7" class="Alg DrawChart7"></svg> </div>
-                                <div class="text-center col-md-3"><label>ChargeCarbon</label><svg id="Chart8" class="Alg DrawChart8"></svg> </div>
-                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="text-center col-md-3"><label>Foamy Carbon</label><svg id="Chart5" class="Alg DrawChart5"></svg> </div>
+                            <div class="text-center col-md-3"><label>NG</label><svg id="Chart6" class="Alg DrawChart6"></svg> </div>
+                            <div class="text-center col-md-3"><label>Aluminum</label><svg id="Chart7" class="Alg DrawChart7"></svg> </div>
+                            <div class="text-center col-md-3"><label>ChargeCarbon</label><svg id="Chart8" class="Alg DrawChart8"></svg> </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="fa-pull-right ">
+        <span>
+            <img alt="image" height="80" src="~/images/LK_turia_logos55cm_optimus.png">
+        </span>
+    </div>
+</div>
 
 
                 @section Scripts {
