--- a/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDMissedHeats.cshtml
@@ -12,8 +12,8 @@
 
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-4">
-        <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
+    <div class="col-sm-12 text-center" style="font-size:40px;color:#000000">
+        @(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")
     </div>
 </div>
 
@@ -32,9 +32,9 @@
                 <div class="col-md-10">
                     <canvas id="chartMTDMissedHeats" width="140" height="50" style="margin: 18px auto 0"></canvas>
                 </div>
-                <div class="col-md-2" style="margin-top:80px">                    
-                    <div >
-                        <ul class="list-group" >
+                <div class="col-md-2" style="margin-top:80px">
+                    <div>
+                        <ul class="list-group">
                             <li class="list-group-item" style="border:hidden;padding:0px;margin-bottom:0px">
                                 <label style="font-size:18px">Crew</label>
                             </li>
@@ -57,6 +57,11 @@
             </div>
 
         </div>
+    </div>
+    <div class="fa-pull-right ">
+        <span>
+            <img alt="image" height="80" src="~/images/LK_turia_logos55cm_optimus.png">
+        </span>
     </div>
 </div>
 
