feat(): font-size gauge

--- a/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
@@ -11,12 +11,21 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-chosen.css" />
 <link href="~/css/plugins/c3/c3.min.css" rel="stylesheet" />
 <style>
-    .mytxt {
-        font-size: 8pt;
-    }
+.mytxt {
+    font-size: 14pt;
+}
  .Alg { 
  width: 100%;
   min-height: 200px;
+}
+.c3-chart-arcs-gauge-min 
+{
+    font-size: 12px;
+}
+
+.c3-chart-arcs-gauge-max 
+{
+    font-size: 12px;
 }
 </style>
 
