feat(): Ajustes Fase I

--- a/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDAverage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Qmos.UI.ViewModels.UpdateTimeViewModel
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "MTD Average (per scrap ton)";
+    ViewData["Title"] = "MTD Average (per ton)";
     ViewData["Root"] = "Dashboards";
 }
 
