--- a/Qmos.UI/Views/Dashboard/MTDTapTempandO2PPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDTapTempandO2PPM.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Qmos.UI.ViewModels.UpdateTimeViewModel
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "MTD Tap Temp and 02 PPM";
+    ViewData["Title"] = "MTD Tap Temp and O2 PPM";
     ViewData["Root"] = "Dashboards";
 }
 
