--- a/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
+++ b/Qmos.UI/Views/Dashboard/ScrapTonPerHour.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Qmos.UI.ViewModels.UpdateTimeViewModel
 @using Microsoft.AspNetCore.Mvc;
 @{
-    ViewData["Title"] = "Scrap Ton Per Hour (POn)";
+    ViewData["Title"] = "Ton Per Hour (POn)";
     ViewData["Root"] = "Dashboards";
 }
 
