--- a/Qmos.UI/Views/Dashboard/TargetTemp.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetTemp.cshtml
@@ -33,7 +33,7 @@
                 <div class="col-lg-3 col-md-4 stat-percent">
                     <div class="ibox ">
                         <div class=" text-center">
-                            <h1 class="no-margins font-bold" style="color:red;" id="Average">0.00</h1>
+                            <h1 class="no-margins font-bold" style="color:red;" id="Average">0.00</h1><h1>%</h1>
                             <small>Average of TempInSpec</small>
                         </div>
                     </div>
