feat(): BD and Elements

--- a/Qmos.UI/Views/UpdateTime/Form.cshtml
+++ b/Qmos.UI/Views/UpdateTime/Form.cshtml
@@ -15,7 +15,6 @@
 }
 <link rel="stylesheet" href="~/css/plugins/sweetalert/sweetalert.css">
 <link rel="stylesheet" href="~/css/plugins/toastr/toastr.min.css" />
-<link rel="stylesheet" href="~/css/plugins/clockpicker/clockpicker.css" />
 <partial name="_HeaderDetailPartial" view-data="ViewData" />
 
 <div class="wrapper wrapper-content animated fadeInRight">
@@ -38,12 +37,11 @@
                             </div>
                             <form asp-action="Post" role="form" method="post">
                                 <input type="hidden" asp-for="@Model.Id" />
-
                                 <div class="row">
                                     <div class="col-md-4">
                                         <label>Time Refresh</label><span class="text-danger"> *</span>
-                                        <div class="input-group clockpicker" data-autoclose="true">
-                                            <input type="text" class="form-control" asp-for="TIME_REFRESH" placeholder="Time Refresh">
+                                        <div class="input-group " data-autoclose="true">
+                                            <input type="text" class="form-control time" asp-for="TIME_REFRESH" placeholder="Time Refresh">
                                             <span class="input-group-addon">
                                                 <span class="fa fa-clock-o"></span>
                                             </span>
@@ -68,9 +66,6 @@
 </div>
 
 @section Scripts{
-
-    <script src="~/js/plugins/clockpicker/clockpicker.js"></script>
-
     <script>
         formatearDataTableOriginal("#table", "@ViewData["Title"]", [0, 1], null);
         $('#table tbody').on('click', '.delete', function () {
@@ -78,7 +73,12 @@
         });
 
         $(document).ready(function () {
-                        $('.clockpicker').clockpicker({ align: 'left', placement: 'top' });
+            $('.time').inputmask("hh:mm:ss", {
+            placeholder: "hh:mm:ss", 
+            insertMode: false, 
+            showMaskOnHover: false     
+          }
+         );
         });
 
     </script>
