--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -67,11 +67,14 @@
     <script>
         $(document).ready(function () {
             GetKWhPerScrapTon();
+            debugger
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
-                setTimeout(refresh, milliseconds);
-                }
+              setTimeout(function(){
+                refresh("@Url.Action("Index", "AutomaticTransition")?Order="+ @Model.ORDER_TRANSITION,@Model.ORDER_TRANSITION);
+            },milliseconds)
+            }
         });
     </script>
 }
