--- a/Qmos.UI/Views/AutomaticTransition/Index.cshtml
+++ b/Qmos.UI/Views/AutomaticTransition/Index.cshtml
@@ -12,26 +12,25 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-chosen.css" />
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-12 text-center" style="font-size:40px;color:#000000">
-        @(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")
+    <div class="col-sm-12 text-center" style="font-size:30px;">
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
     </div>
 </div>
 
+    @section Scripts {
+        <script src="~/js/plugins/toastr/toastr.min.js"></script>
+        <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
+        <script src="~/js/plugins/chartjs/Chart.min.js"></script>
+        <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
+        <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
+        <script src="~/js/plugins/moment/moment.min.js"></script>
+        <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
+        <script src="~/js/Qmos/dashboard.js"></script>
+        <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
 
-@section Scripts {
-    <script src="~/js/plugins/toastr/toastr.min.js"></script>
-    <script src="~/js/plugins/chartjs/Chart.bundle.min.js"></script>
-    <script src="~/js/plugins/chartjs/Chart.min.js"></script>
-    <script src="~/js/plugins/chartjs/chartjs-plugin-labels.js"></script>
-    <script src="~/js/plugins/chartjs/chartjs-plugin-datalabels.js"></script>
-    <script src="~/js/plugins/moment/moment.min.js"></script>
-    <script src="~/js/plugins/daterangepicker/daterangepicker.min.js"></script>
-    <script src="~/js/Qmos/dashboard.js"></script>
-    <script src="~/lib/plugins/chosen/chosen.jquery.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+            });
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-        });
-
-    </script>
-}
+        </script>
+    }
