Feat(): Crud Reference Parameters

--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -66,7 +66,7 @@
     <script>
         $(document).ready(function () {
             debugger
-            GetTargetPPM(@Model.REF1, @Model.REF2);
+            GetTargetPPM(@Model.REFERENCE);
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
