--- a/Qmos.UI/Views/ReferenceParameters/Index.cshtml
+++ b/Qmos.UI/Views/ReferenceParameters/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    @model IList<Qmos.Entities.ReferenceParameters>
+    @model Qmos.UI.ViewModels.ReferenceParametersViewModel
     ViewData["Title"] = "Reference Parameters";
     ViewData["Root"] = "Mangement";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -13,40 +13,68 @@
     <div class="row">
         <div class="col-lg-offset-2 col-lg-8">
             <div class="ibox">
-                <div class="ibox-content text-center p-md">
+                <div class="ibox-content  p-md">
+
+                    <div class="col-lg-12">
+                        <div class="form-group row text-left">
+                            <div class="col-lg-12">
+                                <span class="text-danger"> *</span><span>
+                                    Required fields
+                                </span>
+                            </div>
+                        </div>
+                        <form asp-action="Post" role="form" method="post">
+                            <div class="row">
+                                <div class="col-lg-4 form-group">
+                                    <label>Chart</label><span class="text-danger"> *</span>
+                                    <select class="form-control m-b chosen-select" asp-for="idElement" asp-items="@(Model.ElementList)">
+                                        <option value="0">Select One Option</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-4 form-group">
+                                    <label>Reference</label><span class="text-danger"> *</span>
+                                    <input type="text" placeholder="Ref" class="form-control ref inputNumber" asp-for="Reference">
+
+                                </div>
+                            </div>
+                            <div class="form-group row text-center">
+                                <div class="col-lg-12">
+                                    <button id="btn-save" class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Save</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                     <table class="table table-striped table-bordered table-hover dataTables" id="table">
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Ref 1</th>
+                                <th>Reference</th>
                                 <th hidden>Ref 1</th>
-                                <th>Ref 2</th>
-                                <th hidden>Ref 2</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            @{ foreach (var item in Model)
+                            @{ foreach (var item in Model.List)
                                 {
                                     <tr>
                                         <td>
                                             @item.name_element
                                         </td>
-                                        <td>
-                                            <input type="text" placeholder="Ref 1" value="@item.ref1" class="form-control ref inputNumber" id="@item.Id" data-id="@item.Id" data-ref="1">
+                                        <td width=400>
+                                            <input type="text" placeholder="Ref 1" value="@item.reference" style="width:400px"class="form-control ref inputNumber" id="@item.Id" data-id="@item.Id" data-ref="1">
                                         </td>
                                         <td hidden>
-                                            @string.Format("{0:N}", decimal.Parse(item.ref1))
-                                        </td>
-                                        <td>
-                                            <input type="text" placeholder="Ref 2" value="@item.ref2"class="form-control ref inputNumber" data-id="@item.Id" data-ref="2">
-                                        </td>
-                                        <td hidden>
-                                            @string.Format("{0:N}",decimal.Parse(item.ref2))
+                                            @string.Format("{0:N}", decimal.Parse(item.reference))
+                                        </td>                                        
+                                        <td class="text-center">
+                                            <a data-id="@item.Id" class="btn btn-danger delete">
+                                                <i class="fa fa-trash"></i> Remove
+                                            </a>
                                         </td>
                                     </tr>
-                                    }
                                 }
-                                </tbody>
+                            }
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -75,11 +103,7 @@
             });
         formatearDataTableOriginal("#table", "@ViewData["Title"]", [0, 2,4], null);
         $('#table tbody').on('click', '.delete', function () {
-            eliminarRegistro(".delete", "data-id", "@Url.Action("Remove", "TransitionParameters")", '#table', $(this));
-        });
-
-       $('#table tbody').on('click', '.updateStatus', function () {
-            updateStatus("data-id", "@Url.Action("UpdateStatus", "TransitionParameters")", '#table', $(this));
+            eliminarRegistro(".delete", "data-id", "@Url.Action("Remove", "ReferenceParameters")", '#table', $(this));
         });
     });
 
