--- a/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/TargetPPM.cshtml
@@ -66,7 +66,7 @@
     <script>
         $(document).ready(function () {
             debugger
-            GetTargetPPM(@Model.REFERENCE);
+            GetTargetPPM(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
