--- a/Qmos.UI/Views/Dashboard/MTDTapTempandO2PPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDTapTempandO2PPM.cshtml
@@ -55,7 +55,7 @@
 
     <script>
         $(document).ready(function () {
-            GetMTDTapTempand02PPM();
+            GetMTDTapTempand02PPM(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
