--- a/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
+++ b/Qmos.UI/Views/Dashboard/TapWtTarget.cshtml
@@ -65,7 +65,7 @@
 
     <script>
         $(document).ready(function () {
-            GetTapWtTarget();
+            GetTapWtTarget(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
