--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -64,7 +64,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            GetIronYield();
+            GetIronYield(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
