--- a/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
+++ b/Qmos.UI/Views/Dashboard/KWhPerScrapTon.cshtml
@@ -66,7 +66,7 @@
 
     <script>
         $(document).ready(function () {
-            GetKWhPerScrapTon();
+            GetKWhPerScrapTon(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
             debugger
             //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
