--- a/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDDelays.cshtml
@@ -55,7 +55,7 @@
 
     <script>
         $(document).ready(function () {
-            GetMTDDelays();
+            GetMTDDelays(@Model.IdElement,'@Url.Action("FindByIdElement","ReferenceParameters")');
            //Every X seconds (XXXX milliseconds) the refresh function will be executed
             if (@Model.TIMEMILLISECONDS > 0) {
             var milliseconds = @Model.TIMEMILLISECONDS;
